# rl-swarm

./: .env.example  .gitignore  .gitmodules  =0.1.20  Bootstrap-error-fixed.md  CLAUDE.md  CODE_EXECUTION_FLOW.md  CONTRIBUTING.md  Current-batch-error-fixed.md  Dockerfile.webserver  EXPERIMENTAL_DESIGN_JUSTIFICATION.md  GDRIVE_COLAB_IMPLEMENTATION_PLAN.md  GDRIVE_IMPLEMENTATION.md  GDRIVE_ONLY_IMPLEMENTATION_PLAN.md  GDRIVE_ONLY_TASKS.md  GPU_MEMORY_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_GUIDE.md  Login-Error.md  MACOS_MEMORY_OPTIMIZATION.md  QUICK_START.md  README.md  README.uk.md  README_SCRIPTS.md  README_UV.md  SAPO_PAPER_EXPLAINED.md  SECURITY.md  SECURITY.md.  TESTING.md  auto-nexus.sh  auto-run.sh  docker-compose.yaml  example.env.local  fix_monitoring_dependencies.sh  launch-all.sh  logging_config.yaml  manage.sh  ops_full_manager.sh  pyproject.toml  (+12 more)
.claude/: settings.local.json
arXiv-2509.08721v1/: 00README.json  ArXiv_v1.bbl  ArXiv_v1.tex  gensyn.cls  macros.tex  packages.tex  references.bib
doc/: AI+Crypto开发者机会指南2025.md  Hugging-Face-Hub推送效益分析.md  Mac-Mini-M4优化说明.md  RL-Swarm-Mac使用指南.md  RL-Swarm自动化运行指南.md  RL-Swarm运维管理文档.md  vast.ai网络优化快速入门.md  vast单身公寓落地实践-购物清单.md  vast单身公寓落地实践.md  中国vast.ai实战竞争策略.md  中国vast.ai网络优化方案.md  中国电信VPS网络优化实战方案.md  依赖安装卡住问题解决方案.md  四大AI算力项目投资风险评估.md  离线电站渐进式投资方案.md  端口冲突问题解决方案.md  简化使用说明.md  纯GPU算力投资优化方案.md  节点可见性问题诊断指南.md  英伟达卡与光伏储能投资试点项目.md  购物清单-简化版.md  运维文件整理总结.md
docs/: NODE_ONBOARDING_CHECKLIST.md  NODE_OPERATIONS_FAQ.md  stable_node_guide.md  wsl2-performance-tuning-single-gpu.md  wsl2-safe-restart-guide.md  wsl2-telegram-monitor-wsl2.md  wsl2-troubleshooting-connectivity.md
hivemind_exp/: chain_utils.py  stage_advancer.py
modal-login/: .env  package-lock.json  package.json
notebooks/: EX12.00.RL_Swarm_Coordinator.ipynb  EX12.01.RL_Swarm_Worker.ipynb  EX12.02.RL_Swarm_Monitoring.ipynb  (+22 more)
(+156 files in other folders)
